added storage stack to back the prevCard